--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "payment-front",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,10 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@tanstack/react-query": "^5.51.15",
+    "antd": "^5.18.1",
+    "classnames": "^2.5.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
+    "i18next": "^23.11.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
+    "react-i18next": "^14.1.2",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
+    "@types/node": "^22.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -22,6 +37,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.3.2",
     "sass": "^1.77.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
