--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@hookform/resolvers": "^3.6.0",
     "@tanstack/react-query": "^5.51.15",
     "antd": "^5.18.1",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.12",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "i18next": "^23.11.5",
